EMFormat: Do not "mark citation" in header values
In dark mode headers and header values are normally displayed with white text on a dark background.
But header values starting with the > (greater-than) character are displayed with black text instead of white text.
Adding spaces before the character doesn't appear to affect the bug.
I was able to reproduce this with the Subject and Date headers, I guess it applies to all values of all headers though.
I am using evolution 3.44.4-1, GTK 3.24.34-1, Pango 1.50.9+ds-1 and GNOME shell 42.4-1 on Debian 12 bookworm. JanC from the #evolution IRC channel was also able to reproduce this on Ubuntu 22.04.
-- bye, pabs
Edited by Milan Crha