I#1995 - EMFormat: Do not "mark citation" in header values

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/1995